# fractals

./: .gitignore  Cargo.toml  README.md
benches/: rendering_benchmark.rs  solution_benchmark.rs
src/: lib.rs  main.rs  rendering.rs  server.rs
src/math/: color.rs  complex.rs  mod.rs  polynomial.rs
