[package]
name = "newton_factal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
indicatif = "0.17.1"
itertools = "0.10.5"
use = "0.0.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solution_benchmark"
harness = false

[[bench]]
name = "rendering_benchmark"
harness = false
